Change title and personal details in index.html
Updated the title and personal information in the HTML file.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cyber Security Portfolio</title>
+  <title>Supriyo Guha</title>
   <meta name="description" content="Cyber security portfolio." />
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
   <link rel="canonical" href="https://example.com/" />
@@ -31,9 +31,9 @@
   {
     "@context":"https://schema.org",
     "@type":"Person",
-    "name":"YOUR_NAME",
-    "jobTitle":"Cyber Security Researcher",
-    "url":"https://example.com/",
+    "name":"Supriyo Guha",
+    "jobTitle":"Information Security Researcher",
+    "url":"https://supriyo-guha.github.io/Supriyo-Guha-porfolio/",
     "sameAs":[
       "https://github.com/supriyo-guha",
       "https://github.com/supriyo-guha/Offensive-Adversary-Simulation-Critical-Infrastructures"
@@ -129,7 +129,7 @@
     const PROFILE = {
       // Identity
       name: "Supriyo Guha", // e.g., "Supriyo Guha" or initials
-      heroTitle: "Information Security Portfolio",
+      heroTitle: "Information Security",
       tagline: "Offensive Security Research • Adversary Simulation • Hybrid IT–OT Security",
       shortIntro:
         "Research-oriented Information Security portfolio focused on offensive security, adversary simulation, as a research instrument, and hybrid IT–OT security. Public content is sanitized and non-operational.",
