Update canonical link and Open Graph title
Updated canonical link and Open Graph title for portfolio.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>Supriyo Guha</title>
   <meta name="description" content="Cyber security portfolio." />
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
-  <link rel="canonical" href="https://example.com/" />
+  <link rel="canonical" href="https://supriyo-guha.github.io/Supriyo-Guha-porfolio/" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Cyber Security Portfolio" />
+  <meta property="og:title" content="Information Security Portfolio" />
   <meta property="og:description" content="Research-oriented portfolio." />
   <meta property="og:url" content="https://example.com/" />
   <meta property="og:image" content="https://example.com/assets/og-image.png" />
