--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <div class="container py-4">
       <div class="row g-4 align-items-center">
         <div class="col-lg-7">
-          <h1 class="display-5 fw-bold mb-3" id="heroTitle">Cyber Security Portfolio</h1>
+          <h1 class="display-5 fw-bold mb-3" id="heroTitle">Information Security Portfolio</h1>
           <p class="lead muted mb-3" id="heroTagline"></p>
 
           <div class="d-flex flex-wrap gap-2 mb-4" id="heroTags"></div>
@@ -609,7 +609,7 @@
       // Hero tags
       const heroTags = document.getElementById("heroTags");
       heroTags.innerHTML = "";
-      ["Adversary Simulation","IT–OT Security","Threat Modeling","Measurement"].forEach(t=>{
+      ["Adversary Simulation","VA&PT","IT–OT Security","Threat Modeling","DFIR","Audit"].forEach(t=>{
         heroTags.appendChild(el("span","tag",`<i class="bi bi-dot me-1"></i>${t}`));
       });
 
