Update meta description and SEO title in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Supriyo Guha</title>
-  <meta name="description" content="Cyber security portfolio." />
+  <meta name="description" content="Information security portfolio." />
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
   <link rel="canonical" href="https://supriyo-guha.github.io/Supriyo-Guha-porfolio/" />
 
@@ -214,7 +214,7 @@
 
       // SEO
       seo: {
-        title: "Cyber Security Portfolio | Offensive Simulation • Adversary Research • IT–OT",
+        title: "Supriyo Guha",
         description:
           "Cyber security portfolio featuring academic background (BITS Pilani M.Tech, Himalayan University B.Tech), research on offensive simulation of critical infrastructures, selected projects, honors & awards, and certifications.",
         ogImagePath: "/assets/og-image.png" // optional; add later
