Update profile information in index.html

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
   <script>
     const PROFILE = {
       // Identity
-      name: "Supriyo Guha", // e.g., "Supriyo Guha" or initials
-      heroTitle: "Information Security",
-      tagline: "Offensive Security Research • Adversary Simulation • Hybrid IT–OT Security",
+      name: "सुप्रिय गुहा", // e.g., "Supriyo Guha" or initials
+      heroTitle: "Supriyo Guha",
+      tagline: "Offensive Security Research • Information Security Portfolio",
       shortIntro:
         "Research-oriented Information Security portfolio focused on offensive security, adversary simulation, as a research instrument, and hybrid IT–OT security. Public content is sanitized and non-operational.",
 
